--- a/shigorath/staging/docker-compose.yml
+++ b/shigorath/staging/docker-compose.yml
@@ -19,3 +19,10 @@ db:
   image: postgres
   ports:
     - "5432"
+
+web:
+  build: shigorath/staging/web
+  ports:
+    - "80:80"
+  links:
+    - app
