--- a/shigorath/staging/web/Dockerfile
+++ b/shigorath/staging/web/Dockerfile
@@ -5,9 +5,9 @@ RUN apt-get -y install nginx
 RUN rm -rf /usr/share/nginx/html
 RUN rm /etc/nginx/sites-available/default
 
-ADD application/public /usr/share/nginx/html
+ADD public /usr/share/nginx/html
 
-ADD default.conf /etc/nginx/conf.d/default.conf
-ADD nginx.conf /etc/nginx/nginx.conf
+ADD shigorath/staging/web/default.conf /etc/nginx/conf.d/default.conf
+ADD shigorath/staging/web/nginx.conf /etc/nginx/nginx.conf
 
 CMD service nginx start
