Fix development docker-compose file to be suitable with dockerfile context

--- a/shigorath/development/app/Dockerfile
+++ b/shigorath/development/app/Dockerfile
@@ -8,7 +8,7 @@ RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 USER developer
 RUN mkdir /home/developer/application
-ADD application/Gemfile /home/developer/application/Gemfile
+ADD ./Gemfile /home/developer/application/Gemfile
 
 WORKDIR /home/developer/application
 
